--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scene-md",
+  "name": "popkid254-md",
   "version": "2.0.0",
   "description": "",
   "main": "index.js",
@@ -17,7 +17,7 @@
     "whatsapp-bot",
     "zokou"
   ],
-  "author": "Beltah",
+  "author": "Popkid",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
